<resources>
    <string name="app_name">Urbanchoice</string>
    <string name="search_product">Search Product</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="menu_home">Home</string>


        <string name="navigation_drawer_open">Open navigation drawer</string>
        <string name="navigation_drawer_close">Close navigation drawer</string>
        <string name="nav_header_title">Android Studio</string>
        <string name="nav_header_subtitle">android.studio@android.com</string>
        <string name="nav_header_desc">Navigation header</string>
        <string name="action_settings">Settings</string>

        <string name="menu_gallery">Gallery</string>
        <string name="menu_slideshow">Slideshow</string>

        <string name="pulses">Pulses</string>
        <string name="categories">Categories</string>

        <string name="see_all">See all</string>
        <string name="fresh_vegetable">Fresh fruits &amp; Vegetables</string>
        <string name="oil_ghee">Cokking Oil &amp; Ghee</string>
        <string name="beverages">Beverages</string>
        <string name="vegetables">Vegetables</string>
        <string name="fruits">Fruits</string>
        <string name="hot_deal">Hot Deals</string>
        <string name="explore_category">Explore by Category</string>
        <string name="toppicks">Top Picks</string>
        <string name="Item_Name">Item Name</string>
        <string name="Rs_100">Rs. 100</string>
        <string name="in_stock">In Stock</string>
        <string name="off">Rs 20 save</string>
        <string name="weigt">1 Kg</string>
        <string name="add">Add</string>
        <string name="minus">-</string>
        <string name="plus">+</string>
        <string name="quntity">1</string>
        <string name="proceed">Proceed</string>
        <string name="enter_mobile">Enter Mobile No.</string>
        <string name="details">Details</string>
        <string name="cart">Cart</string>
        <string name="general_info">General Info</string>
        <string name="name">Name</string>
        <string name="mobile_no">Mobile No.</string>
        <string name="email">Email</string>
        <string name="delivery_method">Delivery Method</string>
        <string name="door_delivery">Door delivery</string>
        <string name="pickup">Pick up</string>
        <string name="proceedtoCheckout">Proceed to checkout</string>
        <string name="done">Done</string>
        <string name="delivery_address">Delivery Address</string>
        <string name="change">change</string>
        <string name="city">City</string>
        <string name="zipcode">Zipcode</string>
        <string name="order">Order</string>
        <string name="total_points">Total Points</string>
        <string name="_points">1000 points</string>
        <string name="redeem_reward_points">Redeem reward Points</string>
        <string name="enter">Enter</string>
        <string name="redeem">Redeem</string>
        <string name="redeem_voucher">Redeem Voucher</string>
        <string name="applied_succesfully">Applied Successfully</string>
        <string name="order_info">Order Info</string>
        <string name="sub_total">Sub Total</string>
        <string name="delivery_fee">Delivery Fee</string>
        <string name="tax">Tax</string>
        <string name="discount_perc">Discount %</string>
        <string name="voucher_saving">Voucher Saving</string>
        <string name="reward_saving">Reward Saving</string>
        <string name="order_total">Order Total</string>
        <string name="total_due">Total Due :</string>
        <string name="delivery">Delivery</string>
        <string name="accepted">Accepted</string>
        <string name="cash">Cash</string>
        <string name="upi">UPI</string>
        <string name="paytm">Paytm</string>
        <string name="card">Card</string>
        <string name="net_banking">Net Banking</string>
        <string name="payment_method">Payment Method</string>
        <string name="checkout">Checkout</string>
        <string name="cheque">Cheque</string>
        <string name="make_payment">Make Payment</string>
        <string name="verify">Verify</string>
        <string name="received">Received</string>
        <string name="card_scanner">Card Scanner</string>
        <string name="nfc_payment">NFC Payment</string>
        <string name="card_swipe">Card Swipe</string>
        <string name="year">Year</string>
        <string name="month">Month</string>
        <string name="cvv">CVV</string>
    <string name="no_item_in_cart">No item in Cart</string>
    <string name="add_product">Add product</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="enternameerror">Enter Name</string>
    <string name="enterphoneerror">Enter 10 digit Mobile no.</string>
    <string name="enteremailerror">Enter proper email address</string>
    <string name="enteraddresserror">Enter delivery address</string>
    <string name="topic">Topic</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="chat_agent">Agent</string>
    <string name="rating">Rating</string>
    <string name="order_id">Order ID :</string>
    <string name="date">Order Date</string>
    <string name="Accountinfo">Account Info</string>
    <string name="address">Address</string>
    <string name="log_out">Log Out</string>
    <string name="status">Status</string>
    <string name="itemprice">Item Price</string>
    <string name="order_time">Order Time</string>
    <string name="select_payment">Select Payment method</string>
    <string name="check_internet">Check Internet Connection</string>
    <string name="try_again">Try again</string>
    <string name="noInternet">No Internet Connection</string>
    <string name="email_mobile">Email/Mobile</string>
    <string name="rupees">Rs : %s</string>
    <string name="welcomemsz">Welcome to Urbachoice family</string>
    <string name="okay">Ok</string>

</resources>