<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:background="@color/white">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/size_70"
        android:id="@+id/item_image_layout"
        android:background="@color/white"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/size_10"
        android:layout_height="@dimen/size_90">
        <ImageView
            android:layout_width="@dimen/size_50"
            android:layout_height="@dimen/size_50"
            android:layout_marginLeft="@dimen/size_5"
            android:layout_marginRight="@dimen/size_5"
            android:layout_marginTop="@dimen/size_7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/item_image"/>
        <ImageView
            android:id="@+id/red_offer_img"
            android:layout_width="@dimen/size_35"
            android:layout_height="@dimen/size_35"

            android:background="@drawable/dialog_bg"
            android:backgroundTint="@color/red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="@dimen/size_5"
            />
        <TextView
            android:id="@+id/offer_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/off"
            android:textColor="@color/white"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="@id/red_offer_img"
            app:layout_constraintTop_toTopOf="@id/red_offer_img"
            app:layout_constraintBottom_toBottomOf="@id/red_offer_img"
            app:layout_constraintEnd_toEndOf="@id/red_offer_img"
            android:fontFamily="@font/muli_regular"
            android:maxWidth="@dimen/size_25"
            android:textSize="@dimen/text_size_8"/>
    </androidx.constraintlayout.widget.ConstraintLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Item_Name"
        android:id="@+id/item_name"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_14"
        android:fontFamily="@font/muli_semibold"
        android:layout_toRightOf="@id/item_image_layout"
        android:layout_marginTop="@dimen/size_10"
        android:layout_marginLeft="@dimen/size_10"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weigt"
        android:id="@+id/weight"
        android:textColor="@color/grey"
        android:textSize="@dimen/text_size_12"
        android:fontFamily="@font/muli_semibold"
        android:layout_below="@id/item_name"
        android:layout_toRightOf="@id/item_image_layout"
        android:layout_marginLeft="@dimen/size_10"/>

    <TextView
        android:id="@+id/item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/weight"
        android:text="@string/Rs_100"
        android:textColor="@color/grey"
        android:textSize="@dimen/text_size_12"
        android:fontFamily="@font/muli_bold"
        android:layout_toRightOf="@id/item_image_layout"
        android:layout_marginLeft="@dimen/size_10"
        android:layout_marginTop="@dimen/size_4"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/discounted_price"
        android:text="@string/Rs_100"
        android:textColor="#F37A20"
        android:textSize="@dimen/text_size_14"
        android:fontFamily="@font/muli_bold"
        android:layout_toRightOf="@id/item_image_layout"
        android:layout_below="@id/item_price"
        android:layout_marginLeft="@dimen/size_10"
        android:layout_marginTop="@dimen/size_4"/>





    <LinearLayout
        android:visibility="visible"
        android:id="@+id/add_new_item"
        android:layout_width="@dimen/size_60"
        android:layout_height="@dimen/size_30"
        android:layout_below="@id/weight"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/size_10"
        android:layout_marginTop="@dimen/size_10"
        android:background="@drawable/rounded_green_background"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/add"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/add"
            android:fontFamily="@font/muli_semibold"
            android:textSize="@dimen/text_size_10"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_30"
        android:layout_below="@id/weight"
        android:layout_marginTop="@dimen/size_10"
        android:layout_alignParentRight="true"
        android:id="@+id/add_quantity"
        android:layout_marginRight="@dimen/size_10"

        android:orientation="horizontal">



        <TextView
            android:id="@+id/minus"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="@dimen/size_25"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/minus"
            android:fontFamily="@font/muli_semibold"
            android:background="@drawable/rounded_orange_background"
            android:backgroundTint="@color/colorPrimary"
            android:textSize="@dimen/text_size_10"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/total"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="@dimen/size_30"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/quntity"
            android:fontFamily="@font/muli_semibold"
            android:textSize="@dimen/text_size_10"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/plus"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="@dimen/size_25"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/plus"
            android:fontFamily="@font/muli_semibold"
            android:background="@drawable/rounded_orange_background"
            android:backgroundTint="@color/colorPrimary"
            android:textSize="@dimen/text_size_10"
            android:textColor="@color/white"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/grey"
        android:layout_below="@id/discounted_price"
        android:layout_marginTop="@dimen/size_10"/>


</RelativeLayout>