<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/item_add_layout"
    android:background="@color/greyish_backgroynd"
    >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar_lay"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">


        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/toolbar"
            app:titleTextColor="#4A79E4"
            android:background="#FFFFFF">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/back"
                    android:visibility="visible"
                    android:layout_width="@dimen/size_35"
                    android:layout_height="@dimen/size_35"
                    android:background="@drawable/ic_left_back_"
                    android:layout_centerVertical="true"
                    android:backgroundTint="@color/black"
                    />

                <TextView
                    android:id="@+id/heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="@dimen/size_50"
                    android:text="@string/details"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/text_size_18"
                    android:textColor="@color/black"
                    android:fontFamily="@font/muli_semibold" />

                <ImageView
                    android:visibility="gone"
                    android:id="@+id/add"
                    android:layout_width="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:backgroundTint="@color/black"
                    android:background="@drawable/ic_baseline_add_24"/>

            </RelativeLayout>



        </androidx.appcompat.widget.Toolbar>
        </LinearLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_lay">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:layout_margin="@dimen/size_20">



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_baseline_person_24"
        app:startIconContentDescription="@string/username"
        app:startIconTint="@color/colorPrimary"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/black"
        app:hintAnimationEnabled="true"
        android:hint="@string/name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:fontFamily="@font/muli_regular"
            android:textSize="@dimen/text_size_16"
            android:paddingLeft="@dimen/size_10"
            android:paddingRight="@dimen/size_10"
            android:maxLines="1"/>



    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_baseline_smartphone_24"
            app:startIconContentDescription="@string/username"
            app:startIconTint="@color/colorPrimary"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:hintAnimationEnabled="true"
            android:clickable="false"
            android:focusable="false"
            android:layout_marginTop="@dimen/size_20"
            android:hint="@string/mobile_no">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:clickable="false"
                android:focusable="false"
                android:textColor="@color/black"
                android:fontFamily="@font/muli_regular"
                android:textSize="@dimen/text_size_16"
                android:paddingLeft="@dimen/size_10"
                android:paddingRight="@dimen/size_10"
                android:maxLines="1"/>



        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            app:startIconContentDescription="@string/username"
            app:startIconTint="@color/colorPrimary"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:hintAnimationEnabled="true"
            android:layout_marginTop="@dimen/size_20"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:fontFamily="@font/muli_regular"
                android:textSize="@dimen/text_size_16"
                android:paddingLeft="@dimen/size_10"
                android:paddingRight="@dimen/size_10"
                android:maxLines="1"/>



        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery_address"
            android:layout_marginTop="@dimen/size_20"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_18"
            android:fontFamily="@font/muli_bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addressField"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_100"
            app:startIconDrawable="@drawable/ic_baseline_location_city_24"
            app:startIconContentDescription="@string/username"
            app:startIconTint="@color/colorPrimary"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            android:layout_marginTop="@dimen/size_10"
            app:hintAnimationEnabled="true"
            android:gravity="start"
            android:hint="@string/delivery_address">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:id="@+id/address"
                android:textColor="@color/black"
                android:fontFamily="@font/muli_regular"
                android:gravity="start"
                android:textSize="@dimen/text_size_16"
                android:paddingLeft="@dimen/size_10"
                android:paddingRight="@dimen/size_10"
                android:maxLines="3"/>



        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_method"
            android:layout_marginTop="@dimen/size_20"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_18"
            android:fontFamily="@font/muli_bold"/>


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20"
            android:id="@+id/radiogroup">


            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cash"
                android:textSize="@dimen/text_size_16"
                android:paddingLeft="@dimen/size_10"
                android:id="@+id/cash"
                app:buttonTint="@color/green"
                android:textColor="@color/black"/>


            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upi"
                android:textSize="@dimen/text_size_16"
                android:paddingLeft="@dimen/size_10"
                android:id="@+id/upi"
                app:buttonTint="@color/green"
                android:textColor="@color/black"/>


        </RadioGroup>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_60"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/footer"
            android:layout_margin="@dimen/size_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/button_layout"
            app:cardCornerRadius="@dimen/size_8">

            <LinearLayout
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_60"
                android:layout_marginBottom="@dimen/size_20"
                android:orientation="horizontal"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/size_20"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/muli_bold"
                        android:text="Amount to be paid"
                        android:textColor="@color/black"
                        android:layout_gravity="center_vertical"
                        android:textSize="@dimen/text_size_14" />


                </LinearLayout>
                <View
                    android:layout_width="@dimen/size_1"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/size_80"
                    android:layout_marginTop="@dimen/size_5"
                    android:layout_marginBottom="@dimen/size_5"
                    android:background="@color/grey"/>

                <TextView
                    android:id="@+id/totalcost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Rs_100"
                    android:layout_marginRight="@dimen/size_10"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="@dimen/text_size_16"
                    android:fontFamily="@font/muli_bold"
                    android:textColor="@color/colorPrimary"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/proceed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_grey_editext"
            app:backgroundTint="@color/colorPrimary"
            android:text="@string/proceedtoCheckout"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16"
            android:fontFamily="@font/muli_bold"
            android:textAllCaps="false"
            />
    </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
