<?xml version="1.0" encoding="utf-8"?>




<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greyish_backgroynd"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar_lay"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">


        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/toolbar"
            app:titleTextColor="#4A79E4"
            android:background="#FFFFFF">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/back_press"
                    android:visibility="visible"
                    android:layout_width="@dimen/size_35"
                    android:layout_height="@dimen/size_35"
                    android:background="@drawable/ic_left_back_"
                    android:layout_centerVertical="true"
                    android:backgroundTint="@color/black"
                    />

                <TextView
                    android:id="@+id/heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="@dimen/size_50"
                    android:text="@string/cart"
                    android:textSize="@dimen/text_size_18"
                    android:textColor="@color/black"
                    android:fontFamily="@font/muli_semibold" />



            </RelativeLayout>



        </androidx.appcompat.widget.Toolbar>
        </LinearLayout>


    <LinearLayout
        android:id="@+id/empty_cart"
        android:layout_width="@dimen/size_200"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_lay"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/size_70"
        android:background="@drawable/circle_layout"
        android:gravity="center"
        android:backgroundTint="#264A79E4">


       <ImageView
           android:layout_width="@dimen/size_180"
           android:layout_height="@dimen/size_200"
           android:background="@drawable/emptycart"/>
    </LinearLayout>


    <TextView
        android:id="@+id/no_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/no_item_in_cart"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_20"
        android:fontFamily="@font/muli_semibold"
        android:layout_marginTop="@dimen/size_40"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/empty_cart"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_55"
        android:id="@+id/button_layout"
        android:layout_marginLeft="@dimen/size_30"
        android:layout_marginRight="@dimen/size_30"
        android:layout_marginTop="@dimen/size_40"
        app:layout_constraintTop_toBottomOf="@id/no_item">

        <Button
            android:id="@+id/add_product"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_grey_editext"
            app:backgroundTint="@color/colorPrimary"
            android:text="@string/add_product"

            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16"
            android:fontFamily="@font/muli_bold"
            android:textAllCaps="false"
            />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
